<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    android:padding="20dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/ticket_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="44dp"
        android:text="@string/discount"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/discountRadioBtn"
        android:layout_width="77dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/priceInput">

        <RadioButton
            android:id="@+id/fivePercentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/five"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="216dp" />

        <RadioButton
            android:id="@+id/tenPercentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="264dp" />

        <RadioButton
            android:id="@+id/fifteenPercentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifteen"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="312dp" />

        <RadioButton
            android:id="@+id/twentyPercentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="360dp" />

        <RadioButton
            android:id="@+id/fiftyPercentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifty"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="408dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/discountPrice"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/discounted_price"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/discountRadioBtn" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/calc_label"
        app:layout_constraintStart_toStartOf="@+id/discountPrice"
        app:layout_constraintTop_toBottomOf="@+id/discountPrice" />

    <Button
        android:id="@+id/clearBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/clear_label"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/calcBtn"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn" />

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_ticket_price"
        android:inputType="number|numberSigned|numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discPrice"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/discountPrice"
        app:layout_constraintTop_toBottomOf="@+id/discountRadioBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>